--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
         </div>
       </div>
 
-      <div id="clock_panel" class="panel"><span id="clock_data"></span></div>
+      <div id="clock_panel" class="panel">
+        <div id="clock">
+          <p id="clock_date" class="clock_elm"></p>
+          <p id="clock_time" class="clock_elm"></p>
+        </div>
+      </div>
     </div>
     <script src="index.js" charset="utf-8"></script>
   </body>
