change font to nicomoji

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     />
   </head>
   <body>
+    <style>
+      @import url("https://fonts.googleapis.com/earlyaccess/nicomoji.css");
+    </style>
     <div id="container">
       <div id="icons_panel" class="panel"></div>
 
