--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <style>
       @import url("https://fonts.googleapis.com/earlyaccess/nicomoji.css");
+      @import url("https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@700&&display=swap");
     </style>
     <div id="container">
       <div id="icons_panel" class="panel"></div>
