--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div id="player_panel" class="panel">
         <div id="player">
           <div id="indicator">
-            <p class="indicator_elm">Now playing: <span id="title"></span></p>
-            <p class="indicator_elm">Artist: <span id="artist"></span></p>
+            <p id="indicator_title" class="indicator_elm"></p>
+            <p id="indicator_artist" class="indicator_elm"></p>
           </div>
           <div id="thumbnail_frame"><img id="thumbnail" /></div>
         </div>
