add border-color property

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 
       <div id="clock_panel" class="panel">
         <div id="clock">
-          <p id="clock_time" class="clock_elm"></p>
-          <p id="clock_date" class="clock_elm"></p>
+          <!-- Xはプレースホルダー ないとフィルタかからないときある -->
+          <p id="clock_time" class="clock_elm">XX:XX:XX</p>
+          <p id="clock_date" class="clock_elm">X</p>
         </div>
       </div>
     </div>
