added the ability to set border color of multiple elements

--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
 
       <div id="player_panel" class="panel">
         <div id="player">
-          <div id="indicator">
+          <div id="indicator" class="bordercolor">
             <p id="indicator_title" class="indicator_elm"></p>
             <p id="indicator_artist" class="indicator_elm"></p>
           </div>
-          <div id="thumbnail_frame"><img id="thumbnail" /></div>
+          <div id="thumbnail_frame" class="bordercolor">
+            <img id="thumbnail" />
+          </div>
         </div>
       </div>
 
       <div id="clock_panel" class="panel">
-        <div id="clock">
+        <div id="clock" class="bordercolor">
           <!-- Xはプレースホルダー ないとフィルタかからないときある -->
           <p id="clock_time" class="clock_elm">XX:XX:XX</p>
           <p id="clock_date" class="clock_elm">X</p>
