to stripe background

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@700&&display=swap");
     </style>
     <div id="container">
-      <div id="icons_panel" class="panel"></div>
+      <div id="icons_panel" class="panel bordercolor"></div>
 
       <div id="player_panel" class="panel">
         <div id="player">
